added property config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.redis.database=0
+spring.redis.host=redis-api-manager-cache.redis.cache.windows.net
+spring.redis.port=6379
+spring.redis.password=PKi6krAVLNLm9jAyfGoRlMX2hSy1H7rf8AzCaLteweA=
+spring.redis.timeout=600
